PE-505 Fix vertical alignment of multiline checkboxes (#492)

--- a/web/themes/custom/westy/src/scss/base/_elements.scss
+++ b/web/themes/custom/westy/src/scss/base/_elements.scss
@@ -60,6 +60,8 @@ ul.checkbox-list {
     content: "";
     display: inline-flex;
     height: 1rem;
+    vertical-align: top;
+    margin-top: 4px;
     margin-left: -1.5rem;
     margin-right: 0.5rem;
     width: 1rem;
